Changes to docker file

--- a/GRBot/Dockerfile
+++ b/GRBot/Dockerfile
@@ -12,6 +12,6 @@ FROM mcr.microsoft.com/dotnet/aspnet:5.0
 WORKDIR /app
 COPY --from=build-env /app/out .
 
-COPY config.txt /app/
+COPY config.txt ./
 ENTRYPOINT ["dotnet", "GRBot.dll"]
 
