Updates to included packages

--- a/GRBot/NuGet.Config
+++ b/GRBot/NuGet.Config
@@ -3,4 +3,5 @@
     <packageSources>
         <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
     </packageSources>
+    <PackageReference Include="DSharpPlus.CommandsNext" Version="3.2.3" />
 </configuration>
