Changes to docker file

--- a/GRBot/NuGet.Config
+++ b/GRBot/NuGet.Config
@@ -2,6 +2,6 @@
 <configuration>
     <packageSources>
         <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
+        <add key="DSharpPlus" value="https://nuget.emzi0767.com/api/v3/index.json" protocolVersion="3" />
     </packageSources>
-    <PackageReference Include="DSharpPlus.CommandsNext" Version="3.2.3" />
 </configuration>
